🐛 Fixes z-index bug for Safari

--- a/docs/src/pages/styles.module.css
+++ b/docs/src/pages/styles.module.css
@@ -289,6 +289,7 @@
   background: var(--background-light);
   padding-bottom: 30vh;
   position: relative;
+  z-index: 6;
 }
 .exampleBlock .pageCurve {
   transform: rotateY(180deg);
